<resources>
    <string name="app_name">Beboena</string>
    <string name="app_name_geo">ბებოენა</string>
    <string name="app_name_khucuri">ႡႤႡႭႤႬႠ</string>

    <string name="app_description_geo">ბებოენა გეხმარებათ ისწავლოთ ძველი ქართული ანბანი და წაიკითხოთ ხუცურად</string>

    <string name="txt_letter_sample">ⴀ</string>
    <string name="txt_sentence_sample_geo">ⴌⴀⴞⴄⴑ ⴓⴚⴞⴍ ⴋⴍⴗⴋⴄ ⴅⴈⴌⴋⴄ</string>
    <string name="txt_sentence_sample_khucuri">ნახეს უცხო მოყმე ვინმე</string>
    <string name="txt_long_sentence_sample">ⴌⴀⴞⴄⴑ ⴓⴚⴞⴍ ⴋⴍⴗⴋⴄ ⴅⴈⴌⴋⴄ, ⴟⴃⴀ ⴋⴒⴈⴐⴀⴊⴈ ⴜⴗⴊⴈⴑⴀ ⴎⴈⴐⴑⴀ</string>

    <string name="txt_letters_hint">დაიმახსოვრეთ ასოს დამწერლობა და დაიწყეთ სავარჯიშო დავალება</string>
    <string name="txt_bechduri_label">ბეჭდური (ასომთავრული / ნუსხური)</string>
    <string name="txt_khelnatseri_label">ხელნაწერი (ასომთავრული / ნუსხური)</string>
    <string name="txt_reads_as">(იკითხება როგორც \u0022%s\u0022)</string>
    <string name="txt_number_label">რიცხვითი მნიშვნელობა</string>
    <string name="btn_following_letter">მომდევნო ასო</string>
    <string name="btn_start_exercise">ვივარჯიშოთ</string>

    <string name="txt_pairs_hint">მონიშნეთ შესატყვისი წყვილები</string>

    <string name="txt_learning_letter">სავარჯიშო \u2014 ასო %s</string>
    <string name="txt_translate_sentence_hint">გადათარგმნეთ წინადადება</string>
    <string name="txt_translate_sentence_hint_as_reads">გადათარგმნეთ წინადადება\n(ისე როგორც იკითხება)</string>
    <string name="btn_check">შევამოწმოთ</string>
    <string name="btn_continue">გავაგრძელოთ</string>

    <string name="txt_nice">კარგია!</string>
    <string name="txt_correct">სწორია!</string>
    <string name="txt_wrong">ვაი, შეცდომა…</string>
    <string name="txt_blank">დაწერეთ თარგმანი</string>

    <string name="txt_result_excellent">ბრწყინვალეა!</string>
    <string name="txt_result_satisfactory">კარგია</string>
    <string name="txt_result_poor">არადამაკმაყოფილებელია</string>
    <string name="txt_result_fail">ცუდია!</string>
    <string name="txt_correct_count">%s-დან %s სწორია</string>

    <string name="btn_try_again">ვცადოთ ხელახლა</string>
    <string name="btn_next_letter">შემდეგი ასო</string>
    <string name="btn_prev_letter">წინა ასო</string>

    <string name="mnu_enable_sounds">ხმის ეფექტები</string>
    <string name="mnu_all_caps">მხოლოდ ასომთავრული</string>
    <string name="mnu_definitions">მცირე განმარტებანი</string>
    <string name="mnu_tips_tricks">რჩვევა-ხრიკები</string>
    <string name="mnu_useful_downloads">სასარგებლო მასალა</string>
    <string name="mnu_contact">კონტაქტი</string>

    <string name="btn_close">დახურვა</string>
    <string name="btn_scroll">შემდეგი</string>

</resources>
