<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mnu_enable_sounds"
        android:checkable="true"
        android:title="@string/mnu_enable_sounds" />
    <item
        android:id="@+id/mnu_all_caps"
        android:checkable="true"
        android:title="@string/mnu_all_caps"
        android:visible="false" />
    <!-- menu group -->
    <group android:id="@+id/group_help">
        <item
            android:id="@+id/mnu_definitions"
            android:title="@string/mnu_definitions" />
        <item
            android:id="@+id/mnu_tips"
            android:title="@string/mnu_tips_tricks" />
        <item
            android:id="@+id/mnu_useful_downloads"
            android:title="@string/mnu_useful_downloads" />
        <item
            android:id="@+id/mnu_contact"
            android:title="@string/mnu_contact" />
    </group>
</menu>