<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.TranscriptFragment">

    <TextView
        android:id="@+id/txt_current_letter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="3dp"
        tools:text="სავარჯიშო - ასო ა" />

    <FrameLayout
        android:id="@+id/frame_layout_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp">

        <ProgressBar
            android:id="@+id/pb_transcript_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:padding="2dp"
            android:progress="3"
            android:progressDrawable="@drawable/progressbar_background_rounded"
            android:visibility="visible" />

        <TextView
            android:id="@+id/txt_transcript_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="14sp"
            android:textStyle="bold"
            tools:text="1 / 3" />

    </FrameLayout>

    <TextView
        android:id="@+id/txt_sentence"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.5"
        android:padding="8dp"
        android:textAppearance="@style/TextGeoBechduri"
        app:autoSizeTextType="uniform"
        app:autoSizeMaxTextSize="40sp"
        android:maxHeight="10dp"
        tools:text="@string/txt_sentence_sample_geo" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="0.5">

        <EditText
            android:id="@+id/edt_transcription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:background="@drawable/edt_background_rounded"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:padding="8dp"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:textCursorDrawable="@null"
            android:hint="@string/txt_translate_sentence_hint"
            tools:text="@string/txt_sentence_sample_khucuri" />

        <TextView
            android:id="@+id/txt_transcripted_correct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorCorrectBackground"
            android:padding="8dp"
            android:text="@string/txt_correct"
            android:textColor="@color/colorCorrectText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            tools:layout_marginBottom="80dp" />

        <TextView
            android:id="@+id/txt_transcripted_wrong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginBottom="24dp"
            android:background="@color/colorWrongBackground"
            android:padding="8dp"
            android:text="@string/txt_wrong"
            android:textColor="@color/colorWrongText"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible" />
    </FrameLayout>

    <Button
        android:id="@+id/btn_check"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="20dp"
        android:background="@drawable/btn_background_rounded"
        android:textSize="20sp"
        android:text="@string/btn_check" />

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="20dp"
        android:background="@drawable/btn_background_rounded"
        android:textSize="20sp"
        android:text="@string/btn_continue" />


</LinearLayout>