<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.LettersHomeFragment">

    <TextView
        android:id="@+id/txt_letters_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E762E0"
        android:padding="8dp"
        android:text="@string/txt_letters_hint" />

    <com.ghub.beboena.ui.view.SlidingTabLayout
        android:id="@+id/sliding_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_next_letter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_margin="16dp"
            android:layout_weight="0.5"

            android:background="@drawable/btn_background_rounded"
            android:padding="10dp"

            android:text="@string/btn_next_letter"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="20sp" />

        <Button
            android:id="@+id/btn_start_exercise"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_margin="16dp"
            android:layout_weight="0.5"
            android:background="@drawable/btn_background_rounded"
            android:text="@string/btn_start_exercise"
            app:autoSizeTextType="uniform"
            app:autoSizeMaxTextSize="20sp" />
    </LinearLayout>

</LinearLayout>